--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -77,3 +77,14 @@
 // -----------------------------------------------------------------------------
 
 @import "layouts/layouts"; // 1
+
+// -----------------------------------------------------------------------------
+
+/* Custom Settings */
+@import "custom-settings";
+
+/* Setup Default */
+@import "default";
+
+/* Start Custom */
+@import "custom";
