--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -26,6 +26,7 @@ blog:
     {{/each}}
 
 <div class="main full">
+    <h5 class="heading-h6">Best Seller</h5>
     {{#if products.featured}}
         {{> components/products/featured products=products.featured columns=theme_settings.homepage_featured_products_column_count}}
     {{/if}}
