--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -34,6 +34,9 @@
 
         {{{head.scripts}}}
 
+        {{~inject 'themeSettings' theme_settings}}
+        {{~inject 'token' settings.storefront_api.token}}
+
         {{~inject 'zoomSize' theme_settings.zoom_size}}
         {{~inject 'productSize' theme_settings.product_size}}
         {{~inject 'genericError' (lang 'common.generic_error')}}
