Done Add Mansory For Menu

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -215,6 +215,7 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     min-width: 188px;
     text-align: center;
+    max-height: 48px;
 
     &.btn-large {
         min-width: 259px;
