--- a/assets/scss/settings/global/screensizes/_screensizes.scss
+++ b/assets/scss/settings/global/screensizes/_screensizes.scss
@@ -12,5 +12,17 @@
 // -----------------------------------------------------------------------------
 
 $screen-large:                  1261px; // 1
-$screen-medium:                 801px;
+$screen-medium:                 1025px;
 $screen-small:                  551px;
+
+/* Custom Break Point */
+// -----------------------------------------------------------------------------
+
+$min-1025:                 1025px;
+$max-1024:                 1024px;
+$min-768:                  768px;
+$max-767:                  767px;
+$min-551:                  551px;
+$max-550:                  550px;
+
+
