--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -307,24 +307,24 @@
 
     .header-top__right {
         .navUser {
-            @media (min-width: 801px) {
+            @media (min-width: 1025px) {
                 position: unset;
             }
         }
 
         .header-top__text {
-            @media (min-width: 801px) and (max-width: 1024px) {
+            @media (min-width: 1025px) and (max-width: 1024px) {
                 display: none;
             }
         }
         .navUser-section {
-            @media (min-width: 801px) {
+            @media (min-width: 1025px) {
                 display: flex;
                 align-items: center;
             }
 
             .navUser-item {
-                @media (min-width: 801px) {
+                @media (min-width: 1025px) {
                     display: flex;
                     align-items: center;
                 }
@@ -335,7 +335,7 @@
 
 /* Logo */
 .header-logo--mobile {
-    @media (min-width: 801px) {
+    @media (min-width: 1025px) {
         display: none;
     }
 }
@@ -349,39 +349,92 @@
 .navPages-container-custom {
     background-color: #ff5100;
     .navPages {
-        @media (min-width: 801px) {
+        @media (min-width: $screen-medium) {
             max-width: 100%;
         }
     }
     .custom-header {
-        @media (min-width: 801px) {
+        @media (min-width: $screen-medium) {
             display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding-top: 15px;
+            padding-bottom: 17px;
 
             .header-logo--desktop {
-                position: relative;
+                position: absolute;
                 margin: 0;
                 padding-left: 60px;
-                padding-right: 93px;
+                padding-right: 53px;
                 background-color: #232323;
+                transform: skew(-45deg);
+                top: 0;
+                left: 0;
+                bottom: 0;
+                display: flex;
 
                 &::after {
                     content: "";
-                    border-color: transparent #ff5100 #ff5100 transparent;
-                    border-style: solid;
-                    border-width: 28px 28px 28px 28px;
-                    height: 0px;
-                    width: 0px;
+                    background-color: inherit;
                     position: absolute;
-                    bottom: 0;
-                    right: 0;
+                    width: 100%;
+                    height: 100%;
+                    left: -99%;
+                    top: 0;
                     
+                }
+
+                .header-logo__link {
+                    transform: skew(45deg);
+
+                    .header-logo-image-container {
+                        img {
+                            max-height: 41px;
+                            max-width: 184px;
+                        }
+                    }
+                }
+            }
+
+            .navPages-list {
+                max-width: calc(100% - 575px);
+                margin-right: 26px;
+                display: flex;
+                justify-content: flex-end;
+                flex-wrap: wrap;
+
+                .navPages-item {
+                    .navPages-action {
+                        font-size: 15px;
+                        font-weight: 600;
+                        letter-spacing: 0;
+                        line-height: 1.53em;
+                    }
                 }
             }
 
             .header-logo-image-container {
-                @media (min-width: 801px) {
-                    min-height: unset;
+                min-height: unset;
+            }
+        }
+
+        @media (min-width: $min-1025) and (max-width: 1300px) {
+            .header-logo--desktop {
+                padding-left: 20px;
+                padding-right: 50px;
+
+                .header-logo__link {
+                    .header-logo-image-container {
+                        img {
+                            max-width: 120px;
+                            height: auto;
+                        }
+                    }
                 }
+            }
+
+            .navPages-list {
+                max-width: calc(100% - 400px);
             }
         }
 
