--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -3,7 +3,7 @@
         {{> components/common/quick-search name='nav-menu-quick-search'}}
     </div>
 
-    <div class="custom-header">
+    <div class="container container-1920 custom-header">
         <!-- Logo -->
         {{#if page_type '===' 'default'}}
             <h1 class="header-logo header-logo--desktop header-logo--{{theme_settings.logo-position}}">
@@ -38,6 +38,8 @@
                  {{/each}}
             {{/unless}}
         </ul>
+
+        <a href="#" class="btn btn-primary">GREASE FINDER</a>
     </div>
     
     <ul class="navPages-list navPages-list--user">
