--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -84,6 +84,8 @@
         </script>
         <script async defer src="{{cdn 'assets/dist/theme-bundle.main.js' resourceHint='preload' as='script'}}" onload="onThemeBundleMain()"></script>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+        
         {{{footer.scripts}}}
     </body>
 </html>
