Start Style Mega Menu

--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -60,6 +60,11 @@
             </li>
         {{/each}}
     </ul>
+
+    <!-- Mega Menu Image -->
+    <!-- <div class="navPage-image">
+        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/mega-menu-image-1.png" alt="Mega Menu Image">
+    </div> -->
 </div>
 {{else}}
 <a class="navPages-action{{#if is_active}} activePage{{/if}}"
