--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -85,6 +85,8 @@
         <script async defer src="{{cdn 'assets/dist/theme-bundle.main.js' resourceHint='preload' as='script'}}" onload="onThemeBundleMain()"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+
+        {{> components/custom/global/custom-global}}
         
         {{{footer.scripts}}}
     </body>
