--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -438,6 +438,67 @@
             }
         }
 
+        /* CSS for Mega Menu */
+        .navPages-item {
+            &.has-megamenu {
+                position: relative;
+            }
+        }
+        .navPage-subMenu {
+            width: 700%;
+            max-width: 778px;
+            background-color: rgba($color: #000000, $alpha: 0.8);
+            position: absolute;
+            left: 0;
+            @media (min-width: $min-1025) {
+
+                .navPage-subMenu-list {
+                    width: 100%;
+                    max-width: calc(100% - 200px);
+                }
+
+                .imageArea {
+                    width: 100%;
+                    max-width: 200px;
+                }
+            }
+
+            .navPage-subMenu-list {
+                .navPage-subMenu-item--all {
+                    @media (min-width: 1025px) {
+                        display: none;
+                    }
+                }
+
+                /* Level 2 */
+                .navPage-subMenu-item {
+                    > .navPage-subMenu-action {
+                        font-size: 13px;
+                        font-weight: 600;
+                        letter-spacing: 0.91px;
+                        line-height: 1.0769em;
+                        color: #ffffff;
+                        border-bottom: 0;
+                    }
+
+                    @media (min-width: 1025px) {
+                        width: 50%;
+                    }
+                }
+
+                /* Level 3 */
+                .navPage-childList-item {
+                    > .navPage-childList-action {
+                        color: #ffffff;
+                        font-weight: 300;
+                        font-size: 12px;
+                        letter-spacing: 0.84px;
+                        line-height: 1.166em;
+                    }
+                }
+            }
+        }
+
     }
 }
 
