Start Add Header Saturday

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -276,7 +276,7 @@
 }
 
 
-/* Custom Start */
+/* ------------------------------------ Custom Start ------------------------------------*/
 .header-top__wrapper {
     background-color: stencilColor("header_top_bg");
     .header-top__icon {
