--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -445,16 +445,17 @@
             }
         }
         .navPage-subMenu {
-            width: 700%;
-            max-width: 778px;
-            background-color: rgba($color: #000000, $alpha: 0.8);
-            position: absolute;
-            left: 0;
             @media (min-width: $min-1025) {
+                width: 700%;
+                max-width: 778px;
+                background-color: rgba($color: #000000, $alpha: 0.8);
+                position: absolute;
+                left: 0;
 
                 .navPage-subMenu-list {
                     width: 100%;
                     max-width: calc(100% - 200px);
+                    padding-left: 40px;
                 }
 
                 .imageArea {
@@ -472,28 +473,47 @@
 
                 /* Level 2 */
                 .navPage-subMenu-item {
+                    @media (min-width: 1025px) {
+                        position: relative;
+                    }
+
                     > .navPage-subMenu-action {
                         font-size: 13px;
                         font-weight: 600;
                         letter-spacing: 0.91px;
                         line-height: 1.0769em;
-                        color: #ffffff;
+                        color: stencilColor("navPages-color-2");
                         border-bottom: 0;
+
+                        &:hover {
+                            color: stencilColor("navPages-color-2-hover");
+                        }
                     }
 
                     @media (min-width: 1025px) {
                         width: 50%;
+
+                        .navPage-subMenu-image {
+                            position: absolute;
+                            max-width: 32px;
+                            left: -32px;
+                        }
                     }
                 }
 
                 /* Level 3 */
                 .navPage-childList-item {
                     > .navPage-childList-action {
-                        color: #ffffff;
+                        color: stencilColor("navPages-color-2");
                         font-weight: 300;
                         font-size: 12px;
                         letter-spacing: 0.84px;
                         line-height: 1.166em;
+                        text-transform: uppercase;
+
+                        &:hover {
+                            color: stencilColor("navPages-color-2-hover");
+                        }
                     }
                 }
             }
