--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -84,7 +84,7 @@
         </script>
         <script async defer src="{{cdn 'assets/dist/theme-bundle.main.js' resourceHint='preload' as='script'}}" onload="onThemeBundleMain()"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
 
         {{> components/custom/global/custom-global}}
         
