--- a/templates/components/common/store-logo.html
+++ b/templates/components/common/store-logo.html
@@ -1,17 +1,17 @@
-<a href="{{urls.home}}" class="header-logo__link" data-header-logo-link>
+<a href="{{urls.home}}" class="header-logo__link sr-animate" data-sr-delay="400" data-sr-origin="bottom" data-header-logo-link>
     {{#if settings.store_logo.image}}
         {{#if theme_settings.logo_size '===' 'original'}}
         <img class="header-logo-image-unknown-size"
-             src="{{getImage settings.store_logo.image 'logo_size'}}"
-             alt="{{settings.store_logo.title}}"
-             title="{{settings.store_logo.title}}">
+            src="{{getImage settings.store_logo.image 'logo_size'}}"
+            alt="{{settings.store_logo.title}}"
+            title="{{settings.store_logo.title}}">
         {{else}}
         <div class="header-logo-image-container">
             <img class="header-logo-image"
-                 src="{{getImage settings.store_logo.image 'logo_size'}}"
-                 srcset="{{getImageSrcset1x2x settings.store_logo.image theme_settings.logo_size}}"
-                 alt="{{settings.store_logo.title}}"
-                 title="{{settings.store_logo.title}}">
+                src="{{getImage settings.store_logo.image 'logo_size'}}"
+                srcset="{{getImageSrcset1x2x settings.store_logo.image theme_settings.logo_size}}"
+                alt="{{settings.store_logo.title}}"
+                title="{{settings.store_logo.title}}">
         </div>
         {{/if}}
     {{else}}
