--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -22,7 +22,7 @@
                     <div class="header-top__left flex-align-center">
                     <a href="#" class="header-top__link flex-align-center">
                         <div class="header-top__icon">
-                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-trade-icon-removebg-preview.png" alt="Trade Icon">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-trade-icon.png" alt="Trade Icon">
                         </div>
                         <span class="header-top__text">
                             {{theme_settings.header-top-left-1}}
@@ -30,7 +30,7 @@
                     </a>
                     <a href="tel:+{{theme_settings.header-top-left-1}}" class="header-top__link flex-align-center">
                         <div class="header-top__icon">
-                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-phone-icon.png?" alt="Phone Icon">
+                            <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-phone-icon.png" alt="Phone Icon">
                         </div>
                         <span class="header-top__text">
                             CALL THE TEAM: {{theme_settings.header-top-left-2}}
