--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -32,9 +32,9 @@
         </li>
 
         <!-- Quote -->
-        <a href="#" class="header-top__link flex-align-center">
+        <a href="#" class="header-top__link flex-align-center navUser-item">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-document-icon.png" alt="Quote Icon">
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-quote-icon.png" alt="Quote Icon">
             </div>
             <span class="header-top__text">
                 My Quote
@@ -42,9 +42,9 @@
         </a>
 
         <!-- Cart -->
-        <li class="navUser-item navUser-item--cart">
+        <li class="navUser-item navUser-item--cart header-top__link">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-header-cart-icon.png" alt="cart Icon">
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-cart-icon.png" alt="cart Icon">
             </div>
             <a class="navUser-action header-top__text"
                data-cart-preview
@@ -61,9 +61,9 @@
         </li>
 
         <!-- Wish List -->
-        <a href="#" class="header-top__link flex-align-center">
+        <a href="#" class="header-top__link navUser-item  flex-align-center">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-wishlist-icon.png" alt="Wish List Icon">
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-heart-icon.png" alt="Wish List Icon">
             </div>
             <span class="header-top__text">
                 Wish List
@@ -80,8 +80,8 @@
         {{#if settings.gift_certificates_enabled}}
             <li class="navUser-item">
                 <a class="navUser-action header-top__text"
-                   href="{{urls.gift_certificate.purchase}}"
-                   aria-label="{{lang 'common.gift_cert'}}"
+                    href="{{urls.gift_certificate.purchase}}"
+                    aria-label="{{lang 'common.gift_cert'}}"
                 >
                     {{lang 'common.gift_cert'}}
                 </a>
@@ -89,9 +89,9 @@
         {{/if}}
 
         <!-- Acount -->
-        <li class="navUser-item navUser-item--account">
+        <li class="navUser-item navUser-item--account header-top__link">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-user-icon.png" alt="Acount Icon">
+                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-account-icon.png" alt="Acount Icon">
             </div>
             {{#if customer}}
                 <a class="navUser-action header-top__text"
@@ -126,7 +126,7 @@
         </li>
 
         <!-- Search -->
-        <li class="navUser-item">
+        <li class="navUser-item header-top__link">
             <button class="navUser-action navUser-action--quickSearch"
                type="button"
                id="quick-search-expand"
@@ -135,7 +135,7 @@
                aria-label="{{lang 'common.search'}}"
             >
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/replace-search-icon.png" alt="Acount Icon">
+                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-search-icon.png" alt="Acount Icon">
                 </div>
             </button>
         </li>
